Links in urgent notices are underlined
The bold text could be misinterpreted as just something that needs to be
emphasised. Switching to underline since this is more universally
recognised to mean a link.

No other "urgent" cards include link text, so it's safe to make this
change to existing CSS

--- a/client/my-sites/customer-home/cards/tasks/style.scss
+++ b/client/my-sites/customer-home/cards/tasks/style.scss
@@ -128,7 +128,7 @@
 
 		.task__description a {
 			color: var(--color-neutral-0);
-			font-weight: bold;
+			text-decoration: underline;
 		}
 		.task__skip:hover {
 			color: var(--color-neutral-20);
