- Design Preview: Fix title & logo overlap

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
@@ -219,6 +219,10 @@ $break-design-preview: 1024px;
 				margin: 16px 0 24px;
 				transform: translateY(-58px);
 				min-height: 42px;
+
+				#design-setup-header {
+					padding: 0 60px;
+				}
 			}
 		}
 
