--- a/client/my-sites/stats/stats-module/style.scss
+++ b/client/my-sites/stats/stats-module/style.scss
@@ -677,10 +677,30 @@ ul.module-header-actions {
 			padding-bottom: 4px;
 		}
 	}
+
+	.stats-tabs,
+	.stats-tab:last-child {
+		border-radius: 0 0 5px; /* stylelint-disable-line scales/radii */
+	}
 }
 
 .stats-content-promo {
 	.promo-card-block {
 		border-radius: 5px; /* stylelint-disable-line scales/radii */
+	}
+}
+
+.stats__module-headerless--unified {
+	.store-stats-widget-list,
+	.earnings_breakdown,
+	.earnings_history,
+	.ads__module-header,
+	.ads__module-header-actions {
+		border-radius: 5px; /* stylelint-disable-line scales/radii */
+	}
+
+	.ads__module-header-title {
+		font-size: 20px; /* stylelint-disable-line declaration-property-unit-allowed-list */
+		color: var(--studio-gray-100);
 	}
 }
