Adding missing border-radius

--- a/client/my-sites/stats/stats-module/style.scss
+++ b/client/my-sites/stats/stats-module/style.scss
@@ -680,7 +680,7 @@ ul.module-header-actions {
 
 	.stats-tabs,
 	.stats-tab:last-child {
-		border-radius: 0 0 5px; /* stylelint-disable-line scales/radii */
+		border-radius: 0 0 5px 5px; /* stylelint-disable-line scales/radii */
 	}
 }
 
