Jetpack Backup Add-on integration * Fix failing tests * Update storage usage text color

--- a/client/components/backup-storage-space/style.scss
+++ b/client/components/backup-storage-space/style.scss
@@ -95,7 +95,8 @@
 	white-space: nowrap;
 
 	font-size: $font-body-extra-small;
-	color: var(--color-text-subtle);
+	color: var(--studio-green-50);
+	font-weight: 500;
 
 	a {
 		text-decoration: underline;
