Adding empty state, title url and background colour

--- a/packages/components/src/horizontal-bar-list/stats-card.scss
+++ b/packages/components/src/horizontal-bar-list/stats-card.scss
@@ -12,6 +12,7 @@
 	font-weight: 500;
 	line-height: $row-line-height;
 	color: $font-color;
+	background-color: var(--studio-white);
 
 	.stats-card--header {
 		display: flex;
@@ -19,10 +20,19 @@
 		align-items: center;
 		padding: 0 $padding-outside $header-spacer $padding-outside;
 
-		.stats-card--header--title {
+		.stats-card--header--title,
+		.stats-card--header--title:visited {
 			font-size: $header-font-size;
 			line-height: $header-line-height;
+			color: var(--color-text);
 		}
+	}
+
+	.stats-card--body-empty {
+		padding: 0 $padding-outside;
+		font-weight: 400;
+		padding-top: 4px;
+		color: var(--studio-gray-60);
 	}
 
 	.stats-card--footer {
