--- a/client/my-sites/stats/stats-module/style.scss
+++ b/client/my-sites/stats/stats-module/style.scss
@@ -587,6 +587,30 @@ ul.module-header-actions {
 	font-size: $font-body-extra-small;
 }
 
+.stats__module--insights-unified {
+	.card.section-header {
+		border-radius: 5px 5px 0 0; /* stylelint-disable-line scales/radii */
+		box-shadow: none;
+		border: 1px solid var(--studio-gray-5);
+		border-bottom: 0;
+		margin-bottom: 0;
+		padding: 24px 24px 12px;
+	}
+
+	.card.stats-views,
+	.card.section-header + .card {
+		border-radius: 0 0 5px 5px; /* stylelint-disable-line scales/radii */
+		box-shadow: none;
+		border: 1px solid var(--studio-gray-5);
+		border-top: 0;
+	}
+
+	.section-header__label-text {
+		font-size: 20px; /* stylelint-disable-line declaration-property-unit-allowed-list */
+		line-height: 26px;
+	}
+}
+
 .stats__module--unified {
 	.card {
 		&:first-child {
@@ -702,5 +726,17 @@ ul.module-header-actions {
 	.ads__module-header-title {
 		font-size: 20px; /* stylelint-disable-line declaration-property-unit-allowed-list */
 		color: var(--studio-gray-100);
+		line-height: 26px;
+		padding: 24px 0 12px;
+		height: auto;
+	}
+
+	.ads__module-header-actions {
+		top: 14px;
+	}
+
+	.ads__module-header {
+		height: auto;
+		line-height: normal;
 	}
 }
