--- a/client/layout/universal-navbar-footer/style.scss
+++ b/client/layout/universal-navbar-footer/style.scss
@@ -64,7 +64,7 @@ $breakpoints: 320px, 360px, 480px, 660px, 782px, 960px, 1140px, 1366px, 1440px, 
 	font-size: 1rem;
 	line-height: 36px;
 	font-family: $lp-font-stack-default;
-	background: #2c3338;
+	background: #141517;
 	padding: 25px 20px 80px;
 
 	ul {
