added max width

--- a/client/signup/steps/website-content/style.scss
+++ b/client/signup/steps/website-content/style.scss
@@ -22,3 +22,9 @@
 		}
 	}
 }
+
+.ReactModalPortal {
+	.ReactModal__Content.ReactModal__Content--after-open.dialog.card {
+		max-width: 700px;
+	}
+}
