--- a/packages/components/src/gm-closure-notice/gm-closure-notice.scss
+++ b/packages/components/src/gm-closure-notice/gm-closure-notice.scss
@@ -1,6 +1,6 @@
 @import "@automattic/typography/styles/variables";
 
-.help-center__gm-notice {
+.a8c-components__gm-closure-notice {
 	margin-bottom: 1em;
 
 	.components-panel__row {
