--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -32,6 +32,40 @@
 		}
 	}
 
+	.domains__domain-side-content-container {
+		flex-direction: column;
+		margin-top: 40px;
+		display: none;
+
+		@include break-large {
+			width: 30vw;
+			margin-top: 0;
+			flex-direction: column;
+			display: flex;
+		}
+
+		@include break-wide {
+			width: 350px;
+		}
+	}
+
+	.register-domain-step .domains__domain-side-content-container {
+		display: flex;
+
+		@include break-small {
+			flex-direction: row;
+
+			.domains__domain-side-content {
+				padding-top: 0;
+				border-bottom: none;
+			}
+		}
+
+		@include break-large {
+			display: none;
+		}
+	}
+
 	.register-domain-step__search {
 		padding-top: 0;
 		padding-bottom: 16px;
