Fix styling issue on side content domain

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -35,6 +35,7 @@
 	.domains__domain-side-content-container {
 		flex-direction: column;
 		margin-top: 40px;
+		margin-bottom: 40px;
 		display: none;
 
 		@include break-large {
