Hide domain message on larger screens

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -226,4 +226,10 @@
 			}
 		}
 	}
+	.reskin-side-explainer__subtitle-2 {
+		display: none;
+		@include break-small {
+			display: block;
+		}
+	}
 }
