--- a/client/my-sites/stats/stats-chart-tabs/style.scss
+++ b/client/my-sites/stats/stats-chart-tabs/style.scss
@@ -275,4 +275,88 @@ ul.module-tabs {
 			color: var(--color-neutral-40);
 		}
 	}
+
+	// Chart Tabs
+	.stats-tabs {
+		width: 100%;
+		display: flex;
+		flex-wrap: nowrap;
+		align-items: center;
+		padding: 24px 0 16px;
+		margin-bottom: 32px;
+		border: 0;
+
+		&.is-enabled {
+			background-color: var(--color-surface);
+		}
+
+		.stats-tab {
+			flex: 1;
+			width: auto;
+			border: 0;
+
+			&:not(:first-child) {
+				margin-left: 16px;
+			}
+
+			a {
+				background-color: #eeeeef;
+				border: 1.5px solid transparent;
+				border-radius: 4px;
+				overflow: hidden;
+				color: var(--studio-black);
+
+				&:hover {
+					color: var(--studio-black);
+					background-color: #eeeeef;
+
+					.value {
+						color: var(--studio-black);
+					}
+				}
+
+				.label {
+					color: var(--color-neutral-60);
+					font-size: $font-body-small;
+					line-height: 20px;
+					text-transform: none;
+					letter-spacing: -0.15px;
+				}
+
+				.value {
+					color: var(--studio-black);
+					font-size: $font-title-small;
+					font-weight: 500;
+					line-height: 30px;
+				}
+			}
+
+			&.is-low,
+			&.is-selected,
+			&.is-selected.is-low {
+				a {
+					color: var(--studio-black);
+
+					&:hover {
+						color: var(--studio-black);
+
+						.value {
+							color: var(--studio-black);
+						}
+					}
+
+					.value {
+						color: var(--studio-black);
+					}
+				}
+			}
+
+			&.is-selected {
+				a {
+					border-color: var(--color-primary);
+					background-color: var(--color-surface);
+				}
+			}
+		}
+	}
 }
