--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -306,13 +306,6 @@
 	}
 }
 
-.theme-default {
-	--color-primary: #3057dc;
-	--color-primary-rgb: 48, 87, 220;
-}
-
-$segmented-control-border-radius: 4px;
-
 .new-main-chart {
 	// Traffic chart period header
 	.stats__period-header {
@@ -345,13 +338,13 @@ $segmented-control-border-radius: 4px;
 
 			.segmented-control__item {
 				&:first-of-type .segmented-control__link {
-					border-top-left-radius: $segmented-control-border-radius;
-					border-bottom-left-radius: $segmented-control-border-radius;
+					border-top-left-radius: 4px;
+					border-bottom-left-radius: 4px;
 				}
 
 				&:last-of-type .segmented-control__link {
-					border-top-right-radius: $segmented-control-border-radius;
-					border-bottom-right-radius: $segmented-control-border-radius;
+					border-top-right-radius: 4px;
+					border-bottom-right-radius: 4px;
 				}
 			}
 		}
