--- a/client/my-sites/checkout/composite-checkout/components/checkout-sidebar-plan-upsell/style.scss
+++ b/client/my-sites/checkout/composite-checkout/components/checkout-sidebar-plan-upsell/style.scss
@@ -2,17 +2,18 @@
 	margin-top: 24px;
 }
 
-.checkout-sidebar-plan-upsell .action-panel__title {
-	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
-	font-size: 14px;
-	font-weight: 600;
+.promo-card.checkout-sidebar-plan-upsell .action-panel__title {
+	color: var(--studio-blue-50);
+	display: block;
+	font-size: $font-title-medium;
+	font-weight: 400;
+	line-height: 1.2;
 }
 
 .checkout-sidebar-plan-upsell__plan-grid {
 	display: grid;
 	grid-template-rows: 1fr 1fr;
 	grid-template-columns: 1fr 1fr;
-	border-bottom: 1px solid #ccc;
 }
 
 .checkout-sidebar-plan-upsell__plan-grid > div:nth-child(even) {
@@ -22,6 +23,11 @@
 .checkout-sidebar-plan-upsell__plan-grid > div {
 	border-top: 1px solid #ccc;
 	padding: 0.5em 0;
+
+	&:nth-of-type(1),
+	&:nth-of-type(2) {
+		border-top: none;
+	}
 }
 
 .checkout-sidebar-plan-upsell__do-not-pay {
@@ -33,4 +39,8 @@
 		margin-right: 0;
 		margin-left: 8px;
 	}
+}
+
+.promo-card.checkout-sidebar-plan-upsell .button {
+	width: 100%;
 }
