--- a/client/my-sites/stats/stats-period-navigation/style.scss
+++ b/client/my-sites/stats/stats-period-navigation/style.scss
@@ -29,7 +29,7 @@
 	}
 
 	// For feature `stats/new-main-chart`
-	&.is-new-featured {
+	&.stats-period-navigation--new-main-chart {
 		margin: 0;
 		padding: 0;
 		align-items: baseline;
