--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -306,7 +306,7 @@
 	}
 }
 
-.new-main-chart {
+.stats--new-main-chart {
 	// Traffic chart period header
 	.stats__period-header {
 		display: flex;
