Onboarding standalone installation: Display Jetpack specific plugin images (#69506)
* Load specific Jetpack plugin image as activation footer image.

* Add alternate layout for licensing activation component

* Set different background for alt layout.

* Remove line-height in 'licensing-activation__card-footer-text' styling.

* Rename buildKeyPairByProductSlugs to buildKeyValuePairByProductSlugs.

* Add videopress plugin image and support docs link.

* Change primary button color to black.

* Move primary button color styling in LicensingActivation component.

--- a/client/components/jetpack/licensing-activation/style.scss
+++ b/client/components/jetpack/licensing-activation/style.scss
@@ -3,10 +3,9 @@
 @import "@wordpress/base-styles/variables";
 
 @mixin jetpack-primary-button() {
-	// button colors imported from packages/calypso-color-schemes/src/shared/color-schemes/_jetpack-cloud.scss
-	background-color: var(--studio-jetpack-green-50);
-	border-color: var(--studio-jetpack-green-50);
-	color: var(--color-text-inverted);
+	background-color: var(--studio-black);
+	border-color: var(--studio-black);
+	color: var(--studio-white);
 
 	&:hover,
 	&:focus {
@@ -134,13 +133,21 @@
 }
 
 .licensing-activation__card-footer-text {
+	color: var(--color-neutral-60);
+	font-size: rem(14px);
+	line-height: rem(21px);
+
+	> a {
+		color: var(--color-neutral-60);
+	}
+}
+
+:is(.licensing-activation__card-footer) .licensing-activation__card-footer-text {
 	position: absolute;
+	font-size: inherit;
+	line-height: inherit;
 	width: 100%;
 	text-align: center;
 	left: 0;
 	bottom: 7%;
-	color: var(--color-neutral-60);
-	> a {
-		color: var(--color-neutral-60);
-	}
 }
