--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -769,14 +769,17 @@
 }
 
 .jetpack-standalone-activation-instructions .jetpack-license-key-clipboard {
-	margin: 32px 0 57.5px;
+	margin: 32px 0 0;
+}
+
+.jetpack-standalone-activation-instructions__external-link {
+	display: block;
+	margin: 57.5px 0;
 }
 
 .licensing-activation .jetpack-license-key-clipboard__button.button {
 	margin-top: 0;
 	min-width: 100px;
-	background-color: var(--studio-black);
-	color: var(--studio-white);
 }
 
 .jetpack-checkout-thank-you {
