Fix styling color

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -156,7 +156,7 @@
 			margin-bottom: 12px;
 			padding: 16px 24px;
 			&:hover {
-				border: #646970;
+				border: var(--studio-gray-50);
 			}
 		}
 
