--- a/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
@@ -2,6 +2,11 @@
 
 .link-in-bio.patterns {
 	height: 100vh;
+
+	@supports ( height: 100svh ) {
+		height: 100svh;
+	}
+
 	padding: 25px 0 0;
 
 	@include break-medium {
@@ -38,6 +43,8 @@
 
 		.step-container__content {
 			height: 100%;
+			min-height: 100%;
+			max-height: 100%;
 
 			@include break-small {
 				height: auto;
@@ -45,10 +52,11 @@
 
 			.pattern-picker {
 				height: 100%;
+				position: relative;
 
 				.pattern-picker__carousel {
 					width: 100%;
-					height: 100%;
+					height: calc(100% - 115px);
 				}
 			}
 		}
