--- a/packages/design-carousel/src/styles.scss
+++ b/packages/design-carousel/src/styles.scss
@@ -2,14 +2,30 @@
 @import "@wordpress/base-styles/_breakpoints";
 @import "@wordpress/base-styles/_mixins";
 
-$patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "purple", "yellow",
-	"biba", "chloe-currie", "emily", "luis-carvelleda", "mesh-gradient", "paul-nyberg", "tengfai";
+$patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "purple", "yellow", "biba",
+	"chloe-currie", "emily", "luis-carvelleda", "mesh-gradient", "paul-nyberg", "tengfai";
 
 .design-carousel__item {
 	flex: 1;
 
+	@include break-small {
+		aspect-ratio: 1.5;
+	}
+
+	&.design-carousel__item-mobile {
+		@include break-small {
+			display: none !important;
+		}
+	}
+	&.design-carousel__item-desktop {
+		display: none !important;
+		@include break-small {
+			display: flex !important;
+		}
+	}
+
 	// iPhone aspect ratio
-	aspect-ratio: 1.5;
+	aspect-ratio: 0.48;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -24,12 +40,12 @@ $patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "
 	height: calc(65vh - 50px);
 	outline: none;
 
-	@media ( max-height: 375px ) {
+	@media (max-height: 375px) {
 		aspect-ratio: 0.5;
 	}
 
 	// needed for iOS Safari. iOS has
-	@supports ( min-height: 65svh ) {
+	@supports (min-height: 65svh) {
 		height: calc(65svh - 50px);
 	}
 
