Stats: Update main chart area styling (#69529)
* Introduce feature flag stats/new-main-chart

* Adjust period header with featured component

* Adjust main Chart styling

* Adjust Chart Tabs styling with prop iconSize

* Refactor with themes --color-primary applying

* Refactor feature class naming and minor changes

* Move #my-stats-content section

--- a/client/my-sites/stats/stats-period-navigation/style.scss
+++ b/client/my-sites/stats/stats-period-navigation/style.scss
@@ -27,4 +27,30 @@
 			visibility: hidden;
 		}
 	}
+
+	// For feature `stats/new-main-chart`
+	&.stats-period-navigation--new-main-chart {
+		margin: 0;
+		padding: 0;
+		align-items: baseline;
+
+		.stats-period-navigation__children {
+			text-align: left;
+		}
+
+		.stats-section-title {
+			font-size: $font-title-large;
+			line-height: 40px;
+			color: var(--studio-gray-100);
+		}
+
+		.stats-period-navigation__previous,
+		.stats-period-navigation__next {
+			color: #1e1e1e;
+		}
+
+		.stats-period-navigation__next {
+			margin-left: 4px;
+		}
+	}
 }
