--- a/client/landing/stepper/declarative-flow/internals/steps-repository/store-profiler/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/store-profiler/style.scss
@@ -1,8 +1,17 @@
 .store-profiler {
 	.step-container {
 		.step-container__header {
+			max-width: 600px;
+			margin: 24px auto;
 			.formatted-header__subtitle {
 				text-align: center;
+			}
+		}
+		.step-container__content {
+			max-width: 600px;
+			margin: auto;
+			.form-select {
+				width: 100%;
 			}
 		}
 	}
