Style and logic fixes

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -79,7 +79,7 @@
 		background-image:
 			url(calypso/assets/images/onboarding/ecommerce-intro-1.jpg),
 			url(calypso/assets/images/onboarding/ecommerce-intro-2.jpg);
-		background-position-y: -74px, 74px;
+		background-position-y: -40px, 110%;
 		/*!rtl:ignore*/
 		background-position-x: 109%, -10%;
 		background-repeat: no-repeat, no-repeat;
