Stats: Update page header and layout styling (#69635)
* Update page title to "Jetpack Stats"

* Add new class name to layout component

* Use new class name from the layout component

* Fix broken padding on store chart

* Undo changes to the layout component

--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -209,6 +209,8 @@
 
 // Stats section scoped styles
 .is-section-stats {
+	background: var(--studio-white);
+
 	.followers-count .button {
 		@include breakpoint-deprecated( "<480px" ) {
 			display: none;
