--- a/client/my-sites/store/style.scss
+++ b/client/my-sites/store/style.scss
@@ -44,6 +44,8 @@
 }
 
 .is-section-woocommerce {
+	background: var(--studio-white);
+
 	// overwrite notice styles due to sticky bar
 	.global-notices {
 		z-index: z-index("root", ".is-section-woocommerce .global-notices");
