--- a/client/layout/universal-navbar-header/nav-style.scss
+++ b/client/layout/universal-navbar-header/nav-style.scss
@@ -12,19 +12,21 @@ $studio-blue-30: #0675c4;
 	width: 1px;
 }
 
-.plugins-listing {
-	.masterbar {
-		height: 56px;
-		position: relative;
-		background: $studio-blue-15;
-		border-bottom: 1px solid $studio-blue-15;
-	}
-	.fixed-navigation-header__header {
-		position: absolute;
-		top: 0;
-	}
-	.search-box-header.fixed-top .search-box-header__search {
-		margin-top: -32px;
+.is-section-plugins {
+	[data-calypso-ssr="true"] {
+		.masterbar {
+			height: 56px;
+			position: relative;
+			background: $studio-blue-15;
+			border-bottom: 1px solid $studio-blue-15;
+		}
+		.fixed-navigation-header__header {
+			position: absolute;
+			top: 0;
+		}
+		.search-box-header.fixed-top .search-box-header__search {
+			margin-top: -32px;
+		}
 	}
 }
 
@@ -416,7 +418,7 @@ $x-dropdown-item-line-height: 19px;
 	z-index: 901;
 	position: absolute; /* 1 */
 	top: 55px; /* 1 */
-	padding: (15px + $x-dropdown-background-offset-y) 0 18px;
+	padding: 12px 0;
 	opacity: 0;
 	left: -60px;
 	background: #fff;
