--- a/client/my-sites/stats/stats-list/style.scss
+++ b/client/my-sites/stats/stats-list/style.scss
@@ -840,3 +840,11 @@ ul.module-content-list-legend {
 		}
 	}
 }
+
+.stats-list-actions .module-content-list-item-action .module-content-list-item-action-wrapper {
+	opacity: 1;
+}
+
+.list-posts-pages {
+	margin-bottom: 32px; // to be replaced with sibling CSS once there are more modules swapped
+}
