--- a/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
@@ -5,6 +5,7 @@
 	background-size: 25px, auto;
 	background-position: left 13px center, 95% !important;
 	background-repeat: no-repeat, no-repeat !important;
+	height: 44px;
 
 	/* Overwrites the transition value set by FormInput component.
     It was the cause of the https://github.com/Automattic/wp-calypso/issues/67326 */
@@ -39,6 +40,7 @@
 		width: 100%;
 
 		.select-dropdown__header {
+			height: 44px;
 			border-radius: 4px;
 			font-weight: 400;
 		}
