--- a/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
@@ -1,4 +1,4 @@
-.plans-step {
+.step-container.plans {
 	padding: 0;
 
 	.step-wrapper__header {
@@ -137,17 +137,6 @@
 .plans-step__compare {
 	margin-top: 25px;
 }
-
-
-.signup__step.is-plans .formatted-header__subtitle .button.is-borderless {
-	padding: 0;
-	color: inherit;
-	font-size: inherit;
-	font-weight: inherit;
-	line-height: inherit;
-	text-decoration: underline;
-}
-
 
 .plans__loading {
 	width: 100%;
