TailoredFlows SetupForm: adjust auto-expanding textarea height to match designs

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/components/setup-form/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/components/setup-form/style.scss
@@ -44,6 +44,14 @@
 		}
 	}
 
+	pre {
+		border: none;
+	}
+
+	textarea.form-textarea {
+		overflow: hidden;
+	}
+
 	.form-input-validation {
 		padding-bottom: 0;
 	}
