Padding between icons and labels increased from 8px to 16px

--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -137,7 +137,7 @@
 }
 
 .site-selector .search {
-	margin: 8px;
+	margin: 8px 16px;
 	height: 33px;
 	max-height: 33px;
 	border: 1px solid var(--color-neutral-10);
