--- a/client/reader/sidebar/reader-sidebar-lists/style.scss
+++ b/client/reader/sidebar/reader-sidebar-lists/style.scss
@@ -1,6 +1,7 @@
 .sidebar__menu-item--create-reader-list-link {
 	.gridicon,
 	.sidebar__menu-item-title-text {
+		margin-right: 10px;
 		vertical-align: middle;
 	}
 }
