Fixing style bug and unit tests

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -63,7 +63,7 @@ button {
 .link-in-bio-post-setup,
 .anchor-fm,
 .subscribers,
-.tailored-ecommerce,
+.ecommerce,
 .intro {
 	padding: 60px 0 0;
 	box-sizing: border-box;
