--- a/client/my-sites/stats/stats-period-navigation/style.scss
+++ b/client/my-sites/stats/stats-period-navigation/style.scss
@@ -32,7 +32,7 @@
 	&.stats-period-navigation--new-main-chart {
 		margin: 0;
 		padding: 0;
-		align-items: baseline;
+		align-items: center;
 
 		.stats-period-navigation__children {
 			text-align: left;
@@ -44,9 +44,17 @@
 			color: var(--studio-gray-100);
 		}
 
+		.stats-date-picker__refresh-status {
+			font-size: $font-body-small;
+			line-height: 16px;
+		}
+
 		.stats-period-navigation__previous,
 		.stats-period-navigation__next {
 			color: #1e1e1e;
+			// Icon size 24x24
+			width: 24px;
+			height: 24px;
 		}
 
 		.stats-period-navigation__next {
