--- a/client/blocks/upsell-nudge/style.scss
+++ b/client/blocks/upsell-nudge/style.scss
@@ -4,7 +4,7 @@
 	border: 0;
 	border-radius: 2px;
 	color: var(--color-text-inverted);
-	margin: -4px 16px 8px;
+	margin: 0 16px 16px;
 
 	a,
 	button {
