--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -72,11 +72,12 @@ $font-size: rem(14px);
 		box-sizing: border-box;
 
 		.sidebar__separator {
-			margin: 0 0 11px;
+			margin: 16px 0;
+			border-top: 1px solid var(--color-sidebar-border);
 		}
 
 		.site__content {
-			padding: 10px 0 10px 16px;
+			padding: 16px 0 16px 16px;
 		}
 
 		.site__home {
@@ -344,7 +345,6 @@ $font-size: rem(14px);
 	.upsell-nudge.banner.card.is-compact {
 		padding: 7px 12px 7px 4px;
 		line-height: 26px;
-		margin-top: 8px;
 	}
 
 	.upsell-nudge.banner.card.is-compact .banner__action {
@@ -363,13 +363,13 @@ $font-size: rem(14px);
 
 	.current-site__switch-sites .button.is-borderless {
 		color: var(--color-sidebar-text-alternative);
-		padding: 6px 8px 6px 44px;
+		padding: 11px 8px 11px 44px;
 	}
 
 	.current-site__switch-sites .button.is-borderless .gridicon {
 		height: 20px;
 		width: 20px;
-		top: 9px;
+		top: 14px;
 		left: 16px;
 	}
 
