--- a/client/layout/universal-navbar-header/nav-style.scss
+++ b/client/layout/universal-navbar-header/nav-style.scss
@@ -28,15 +28,18 @@ $studio-blue-30: #0675c4;
 	}
 }
 
-.is-section-themes.has-no-sidebar {
-	.masterbar {
-		height: 56px;
-		position: relative;
-		background: $studio-blue-15;
-		border-bottom: 1px solid $studio-blue-15;
-	}
-	.layout__content {
-		overflow: visible;
+.is-section-themes,
+.is-section-theme {
+	&.has-no-sidebar {
+		.masterbar {
+			height: 56px;
+			position: relative;
+			background: $studio-blue-15;
+			border-bottom: 1px solid $studio-blue-15;
+		}
+		.layout__content {
+			overflow: visible;
+		}
 	}
 }
 
