--- a/client/my-sites/store/style.scss
+++ b/client/my-sites/store/style.scss
@@ -13,6 +13,8 @@
 	@import "components/table/style";
 	@import "components/woocommerce-colophon/style";
 
+	@import "client/my-sites/stats/modernized-tooltip-styles.scss";
+
 	.main {
 		padding-top: 72px;
 
@@ -61,74 +63,6 @@
 
 		@include breakpoint-deprecated( "<660px" ) {
 			margin: 0;
-		}
-	}
-
-	// Overwrite Tooltip styles
-	.tooltip.popover.chart__tooltip {
-		&.is-bottom-right,
-		&.is-bottom-left,
-		&.is-bottom {
-			.popover__arrow {
-				border-bottom-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-top,
-		&.is-top-left,
-		&.is-top-right {
-			.popover__arrow {
-				border-top-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-left {
-			.popover__arrow {
-				border-left-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-right {
-			.popover__arrow {
-				border-right-color: var(--color-neutral-100);
-			}
-		}
-
-		.popover__inner {
-			color: var(--color-text-inverted);
-			background: var(--color-neutral-100);
-			font-size: $font-body-small;
-			padding: 16px 24px;
-
-			ul {
-				li {
-					font-size: $font-body-small;
-					font-weight: 500;
-					line-height: 20px;
-					letter-spacing: -0.24px;
-					margin-bottom: 10px;
-					text-transform: none;
-
-					&:last-child {
-						margin-bottom: 0;
-					}
-
-					.value {
-						color: inherit;
-					}
-
-					.gridicon {
-						margin-right: 12px;
-					}
-				}
-			}
-		}
-
-		.module-content-list-item {
-			&.is-date-label {
-				font-weight: 600;
-				border-bottom: 0;
-			}
 		}
 	}
 }
